fix for tab collapse

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -596,7 +596,7 @@
 }
  .ct-node .ct-nodeLabel{
     display:block;
-    font-size:10px;
+    font-size:12px;
     cursor:default;
     word-wrap: break-word;
     padding-top: 2px;
